eng doc review and fixes in other langs

--- a/html/en/helpers.html
+++ b/html/en/helpers.html
@@ -1,6 +1,6 @@
 <div class="typo-badge">
 	<span class="close" title="Больше не показывать"></span>
-	Found inaccuracy or typo?  <br> Select it and press <br>
+	Found a typo?  <br> Select it and press <br>
 	<button>CTRL</button>+<button>Enter</button>
 </div>
 <form class="typo" method="POST" target="typo-iframe">
