--- a/html/ua/helpers.html
+++ b/html/ua/helpers.html
@@ -1,6 +1,6 @@
 <div class="typo-badge">
 	<span class="close" title="Больше не показывать"></span>
-	Знайшли помилку в тексті? <br> Виберіть його і натисніть <br>
+	Знайшли помилку в тексті? <br> Виберіть її і натисніть <br>
 	<button>CTRL</button>+<button>Enter</button>
 </div>
 <form class="typo" method="POST" target="typo-iframe">
