--- a/html/ru/helpers.html
+++ b/html/ru/helpers.html
@@ -1,6 +1,6 @@
 <div class="typo-badge">
 	<span class="close" title="Больше не показывать"></span>
-	Нашли опечатку или ошибку? <br> Выберите текст и нажмите <br>
+	Нашли опечатку? <br> Выберите текст и нажмите <br>
 	<button>CTRL</button>+<button>Enter</button>
 </div>
 <form class="typo" method="POST" target="typo-iframe">
