add fetch polyfill

--- a/html/ua/helpers.html
+++ b/html/ua/helpers.html
@@ -1,5 +1,5 @@
 <div class="typo-badge">
-	<span class="close" title="Больше не показывать"></span>
+	<span class="close" title="Більше не показувати"></span>
 	Знайшли помилку в тексті? <br> Виберіть її і натисніть <br>
 	<button>CTRL</button>+<button>Enter</button>
 </div>
