--- a/html/en/helpers.html
+++ b/html/en/helpers.html
@@ -1,3 +1,10 @@
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'matreshkajs/matreshka'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
 <div class="typo-badge">
 	<span class="close" title="Больше не показывать"></span>
 	Found a typo?  <br> Select it and press <br>
