--- a/html/ru/helpers.html
+++ b/html/ru/helpers.html
@@ -1,3 +1,10 @@
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'matreshkajs/matreshka/ru'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
 <div class="typo-badge">
 	<span class="close" title="Больше не показывать"></span>
 	Нашли опечатку? <br> Выберите текст и нажмите <br>
