--- a/html/ua/helpers.html
+++ b/html/ua/helpers.html
@@ -1,3 +1,10 @@
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'matreshkajs/ua'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
 <div class="typo-badge">
 	<span class="close" title="Більше не показувати"></span>
 	Знайшли помилку в тексті? <br> Виберіть її і натисніть <br>
