--- a/static/forum/index.ua.html
+++ b/static/forum/index.ua.html
@@ -12,7 +12,7 @@
 	<header>
 		<a href="/"><img src="/img/mk5-logo_full-horiz.svg" height="60"></a>
 	</header>
-	<a class="muut" href="https://muut.com/i/matreshkajs-forum-ua">Форум Matreshka.js</a>
+	<a class="muut" href="https://muut.com/i/matreshkajs-forum-ua"></a>
 	<script src="//cdn.muut.com/1/moot.uk.min.js"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
