--- a/html/layout.html
+++ b/html/layout.html
@@ -19,8 +19,7 @@
 %>
 
 <!DOCTYPE html>
-<html  manifest="matreshka.appcache">
-
+<html>
 	<head>
 		<title><%= page.title %></title>
 		<meta name="description" content="<%= page.description %>">
@@ -51,21 +50,7 @@
 		<meta name="theme-color" content="#8BC34A">
 		<meta name="google-site-verification" content="h6PRRaItZUtT98WEfeFWdOwlBs3eYUaq4EnFjBLtvAM">
 		<meta property="og:image" content="http://matreshka.io/img/mk_logo.png">
-		<script>
-		if (window.applicationCache) {
-			applicationCache.addEventListener('updateready', function() {
-				if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
-					window.applicationCache.update();
-					window.applicationCache.swapCache();
-					window.location.reload();
-				}
-			});
-		}
-		// remove loader on slow load
-		setTimeout(function() {
-			document.querySelector('.loader').className += ' hide';
-		}, 10000);
-		</script>
+
 		<style>
 			.loader {
 				position: fixed;
