Add another promo phrase

--- a/html/en/promo.html
+++ b/html/en/promo.html
@@ -4,7 +4,7 @@
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
 		<span class="version">2</span>
 		<div class="demo">
-			<output class="out">The easiest framework in the Universe</output>
+			<output class="out">A simple framework for single-page applications creation</output>
 			<input type="text" class="in">
 			<pre><code class="lang-html">&lt;input class=&quot;in&quot; type=&quot;text&quot;&gt;
 &lt;output class=&quot;out&quot;&gt;&lt;/output&gt;
@@ -13,7 +13,7 @@
 &lt;script&gt;
 const app = new Matreshka();
 app.bindNode('x', '.in, .out');
-app.x = 'The easiest framework in the Universe';
+app.x = 'A simple framework for single-page applications creation';
 &lt;/script&gt;</code></pre>
 		</div>
 		<p>
