--- a/html/en/promo.html
+++ b/html/en/promo.html
@@ -23,7 +23,7 @@ app.x = 'A simple framework for single-page applications creation';
 
 		<div class="social">
 			<a href="https://twitter.com/matreshkajs" class="social-twitter">matreshkajs</a>
-			<a href="https://matreshka.io/forum" class="social-forum">Forum</a>
+			<a href="//matreshka.io/forum" class="social-forum">Forum</a>
 			<a href="https://gitter.im/matreshkajs/matreshka" class="social-gitter">Chat on Gitter</a>
 		</div>
 
