--- a/html/en/helpers.html
+++ b/html/en/helpers.html
@@ -12,14 +12,14 @@
 </div>
 <form class="typo" method="POST" target="typo-iframe">
 	<i class="close-modal"></i>
-	<h5>Ошибка на сайте</h5>
+	<h5>A typo</h5>
 	<p class="selection"></p>
-	<textarea class="comment" rows="2" placeholder="Комментарий (не обязательно)"></textarea>
+	<textarea class="comment" rows="2" placeholder="Comment (optionals)"></textarea>
 	<input type="hidden" class="page">
 	<input type="hidden" class="selection">
 	<div class="action-bar">
-		<button type="submit">Отправить</button>
-		<button class="cancel">Отменить</button>
+		<button type="submit">Submit</button>
+		<button class="cancel">Cancel</button>
 	</div>
 </form>
 <script>
