Add link to defijs

--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -2,6 +2,10 @@
 	<span class="view-switcher">
 		<span data-value="all" class="checked">Всё сразу</span><span data-value="per-one">По одному</span>
 	</span>
+	<span class="nav-heading">Нужно меньше?</span>
+	<a href="https://defi.js.org" style="text-align: center;">
+		<img src="https://defijs.github.io/assets/logo.svg" style="width: 60px;">
+	</a>
 	<span class="nav-heading">Старт</span>
 	<a href="#!home">Главная</a>
 	<a href="#!introduction">Введение</a>
