Add link to defijs (github)

--- a/html/ua/nav.html
+++ b/html/ua/nav.html
@@ -3,7 +3,7 @@
 		<span data-value="all" class="checked">Все відразу</span><span data-value="per-one">По одному</span>
 	</span>
 	<span class="nav-heading">Треба меньше?</span>
-	<a href="https://defi.js.org" style="text-align: center;">
+	<a href="https://github.com/defijs/defi" style="text-align: center;">
 		<img src="https://defijs.github.io/assets/logo.svg" style="width: 60px;">
 	</a>
 	<span class="nav-heading">Старт</span>
