--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -3,7 +3,7 @@
 		<span data-value="all" class="checked">Everything</span><span data-value="per-one">One by one</span>
 	</span>
 	<span class="nav-heading">Need less?</span>
-	<a href="https://defi.js.org" style="text-align: center;">
+	<a href="https://github.com/defijs/defi" style="text-align: center;">
 		<img src="https://defijs.github.io/assets/logo.svg" style="width: 60px;">
 	</a>
 	<span class="nav-heading">Start</span>
