--- a/html/layout.html
+++ b/html/layout.html
@@ -87,8 +87,8 @@
 		<div class="loader">
 			<div class="loader-inner"> </div>
 		</div>
-		<link rel="stylesheet" href="css/fonts.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="/css/fonts.css">
+		<link rel="stylesheet" href="/css/style.css">
 
 		<header>
 			<div class="header-content">
