fix: Some updates per Seemple.js

--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -31,7 +31,7 @@
 	<a href="https://habrahabr.ru/company/seemple/blog/277171/">Роутер</a>
 
 	<span class="nav-heading">Другие языки</span>
-	<a href="//ua.seemple.io/" class="another-language"><i></i> Українською</a>
-	<a href="//seemple.io/" class="another-language"><i></i> In English</a>
+	<a href="/ua/" class="another-language"><i></i> Українською</a>
+	<a href="/" class="another-language"><i></i> In English</a>
 	<a>Обновлено <%= updatedDate %></a>
 </nav>
