--- a/html/ua/nav.html
+++ b/html/ua/nav.html
@@ -28,8 +28,8 @@
 	<%- include('../common/links.html') %>
 
 	<span class="nav-heading">Інщі мови</span>
-	<a href="//seemple.io/" class="another-language"><i></i> In English</a>
-	<a href="//ru.seemple.io/" class="another-language"><i></i> На русском</a>
+	<a href="/" class="another-language"><i></i> In English</a>
+	<a href="/ru/" class="another-language"><i></i> На русском</a>
 
 	<a>Оновлено <%= updatedDate %></a>
 </nav>
