--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -28,7 +28,7 @@
 	<%- include('../common/links.html') %>
 
 	<span class="nav-heading">Other languages</span>
-	<a href="//ua.seemple.io/" class="another-language"><i></i> Українською</a>
-	<a href="//ru.seemple.io/" class="another-language"><i></i> На русском</a>
+	<a href="/ua/" class="another-language"><i></i> Українською</a>
+	<a href="/ru/" class="another-language"><i></i> На русском</a>
 	<a>Last update <%= updatedDate %></a>
 </nav>
