--- a/html/en/promo.html
+++ b/html/en/promo.html
@@ -1,10 +1,9 @@
 <section id="promo">
 	<article id="!home">
-		<img src="img/mk5-logo_seemple.svg" class="mk-logo-seemple">
-		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
-		<span class="version">2</span>
+		<img src="/logo/seemple-full-horizontal.svg" class="logo-seemple">
+		<span class="version"></span>
 		<div class="demo">
-			<output class="out">A simple framework for single-page applications creation</output>
+			<output class="out">A framework for single-page applications creation</output>
 			<input type="text" class="in">
 			<pre><code class="lang-html">&lt;input class=&quot;in&quot; type=&quot;text&quot;&gt;
 &lt;output class=&quot;out&quot;&gt;&lt;/output&gt;
@@ -13,7 +12,7 @@
 &lt;script&gt;
 const app = new Seemple();
 app.bindNode('x', '.in, .out');
-app.x = 'A simple framework for single-page applications creation';
+app.x = 'A framework for single-page applications creation';
 &lt;/script&gt;</code></pre>
 		</div>
 		<p>
@@ -21,11 +20,7 @@ app.x = 'A simple framework for single-page applications creation';
 			<a href="https://github.com/finom/seemple" class="github-btn">Github <i></i></a>
 		</p>
 
-		<div class="social">
-			<a href="https://twitter.com/seemplejs" class="social-twitter">seemplejs</a>
-			<a href="//seemple.io/forum" class="social-forum">Forum</a>
-			<a href="https://gitter.im/seemplejs/seemple" class="social-gitter">Chat on Gitter</a>
-		</div>
+		<div class="social"></div>
 
 		<div class="sponsors hide">
 			<h3>Some logos</h3>
