--- a/html/ru/nav.html
+++ b/html/ru/nav.html
@@ -4,7 +4,7 @@
 	</span>
 	<span class="nav-heading">Нужно меньше?</span>
 	<a href="https://github.com/defijs/defi" style="text-align: center;">
-		<img src="https://defijs.github.io/assets/logo.svg" style="width: 60px;">
+		<img src="https://defi.js.org/logo/logo.svg" style="width: 60px;">
 	</a>
 	<span class="nav-heading">Старт</span>
 	<a href="#!home">Главная</a>
