--- a/html/en/nav.html
+++ b/html/en/nav.html
@@ -4,7 +4,7 @@
 	</span>
 	<span class="nav-heading">Need less?</span>
 	<a href="https://github.com/defijs/defi" style="text-align: center;">
-		<img src="https://defijs.github.io/assets/logo.svg" style="width: 60px;">
+		<img src="https://defi.js.org/logo/logo.svg" style="width: 60px;">
 	</a>
 	<span class="nav-heading">Start</span>
 	<a href="#!home">Home</a>
