--- a/ru/index.html
+++ b/ru/index.html
@@ -93,7 +93,7 @@
 	</span>
 	<span class="nav-heading">Нужно меньше?</span>
 	<a href="https://github.com/defijs/defi" style="text-align: center;">
-		<img src="https://defijs.github.io/assets/logo.svg" style="width: 60px;">
+		<img src="https://defi.js.org/logo/logo.svg" style="width: 60px;">
 	</a>
 	<span class="nav-heading">Старт</span>
 	<a href="#!home">Главная</a>
@@ -1483,7 +1483,7 @@
 	<span class="nav-heading">Другие языки</span>
 	<a href="/ua/" class="another-language"><i></i> Українською</a>
 	<a href="/" class="another-language"><i></i> In English</a>
-	<a>Обновлено 28.1.2020</a>
+	<a>Обновлено 16.9.2020</a>
 </nav>
 
 
