--- a/ua/index.html
+++ b/ua/index.html
@@ -93,7 +93,7 @@
 	</span>
 	<span class="nav-heading">Треба меньше?</span>
 	<a href="https://github.com/defijs/defi" style="text-align: center;">
-		<img src="https://defijs.github.io/assets/logo.svg" style="width: 60px;">
+		<img src="https://defi.js.org/logo/logo.svg" style="width: 60px;">
 	</a>
 	<span class="nav-heading">Старт</span>
 	<a href="#!home">Головна</a>
@@ -1484,7 +1484,7 @@
 	<a href="/" class="another-language"><i></i> In English</a>
 	<a href="/ru/" class="another-language"><i></i> На русском</a>
 
-	<a>Оновлено 28.1.2020</a>
+	<a>Оновлено 16.9.2020</a>
 </nav>
 
 
